# token-optimizer

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  MANIFEST.in  PRIVACY.md  README.md  RELEASE_NOTES.md  SECURITY.md  TERMS.md  pyproject.toml
.claude-plugin/: marketplace.json
.codex-plugin/: plugin.json
.github/workflows/: gate.yml  gatebot-rerun.yml
benchmarks/fixtures/common-python-cli-session/: fixture.md  must-preserve.md
benchmarks/fixtures/common-python-cli-session/baseline/: cli.py  continuation-note.md  error-output.txt  readme.md  security-model.md  test-output.txt
benchmarks/fixtures/common-python-cli-session/optimized/: outline-output.txt  summary-output.txt
docs/: benchmarking.md  install-claude-code.md  install-cli.md  install-codex.md  local-marketplace-verification.md  persistence-map.md  provider-benchmark-contributor-guide.md  provider-support.md  security-model.md
marketplace/: README.md
marketplace/.agents/plugins/: marketplace.json
marketplace/plugins/token-optimizer/mcp/: context-gauges-widget.html  hook-control-widget.html  server.mjs
mcp/: hook-control-widget.html  server.mjs
plugins/token-optimizer/: README.md
plugins/token-optimizer/.claude-plugin/: plugin.json
scripts/: check_release_artifacts.py  sync_mirrors.py
skills/token-optimizer/: SKILL.md
src/token_optimizer/: __init__.py  anthropic_benchmark.py  audit.py  benchmark_runner.py  cli.py  dashboard.py  doctor.py  estimator.py  gauges.py  git_state.py  hooks.py  limits.py  openai_benchmark.py  outline.py  paths.py  persistence.py  summarize.py
tests/: test_anthropic_benchmark.py  test_audit.py  test_benchmark_fixture_contract.py  test_benchmark_runner.py  test_cli.py  test_dashboard.py  test_doctor.py  test_estimator.py  test_git_state.py  test_hooks.py  test_limits.py  test_no_network.py  test_openai_benchmark.py  test_outline.py  test_paths.py  test_persistence.py  test_plugin_manifest.py  test_summarize.py
tests/golden/: doctor_default.json  doctor_default.txt  hooks_install_dry_run.json  hooks_install_dry_run.txt
(+2 files in other folders)
