[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "token-optimizer"
version = "0.1.0"
description = "Local-first context hygiene tooling for AI coding sessions"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = []

[project.optional-dependencies]
openai = ["tiktoken>=0.11.0"]

[project.scripts]
token-optimizer = "token_optimizer.cli:main"

[project.urls]
Homepage = "https://github.com/avikahana/token-optimizer"
Repository = "https://github.com/avikahana/token-optimizer"
Privacy = "https://github.com/avikahana/token-optimizer/blob/main/PRIVACY.md"
Terms = "https://github.com/avikahana/token-optimizer/blob/main/TERMS.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
